Изменение стилей фоновых слоев

--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
 <div class="outside-wrapper">
     <div class="inside-wrapper">
         <header class="page-header">
-            <div class="page-header__label">
-
-            </div>
+            <div class="page-header__label"></div>
             <nav class="container-fluid">
         <ul class="row page-header__menu">
             <li class="col"><a href="">Информация</a></li>
